--- a/app.json
+++ b/app.json
@@ -4,4 +4,7 @@
   "repository": "https://github.com/hashedin/squealy",
   "logo": "https://github.com/hashedin/squealy/blob/master/squealy/static/media/logo.71a19eb7.png",
   "keywords": ["javascript", "googlecharts", "django", "python", "dashboard", "API"]
+  "env": {
+    "QUERY_DB": "mysql://root:root@localhost:3306/social_hu"
+  }
 }
