--- a/app.json
+++ b/app.json
@@ -3,5 +3,8 @@
   "description": "Write SQL, Create APIs",
   "repository": "https://github.com/hashedin/squealy",
   "logo": "https://github.com/hashedin/squealy/blob/master/squealy/static/media/logo.71a19eb7.png",
-  "keywords": ["javascript", "googlecharts", "django", "python", "dashboard", "API"]
+  "keywords": ["javascript", "googlecharts", "django", "python", "dashboard", "API"],
+  "env": {
+    "DJANGO_SETTINGS_MODULE": "example.settings"
+  }
 }
