--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Squealy",
   "description": "Write SQL, Create APIs",
-  "repository": "https://github.com/hashedin/squealy",
+  "repository": "https://github.com/devashishsharma2302/testing-heroku-deployment",
   "logo": "https://github.com/hashedin/squealy/blob/master/squealy/static/media/logo.71a19eb7.png",
   "keywords": ["javascript", "googlecharts", "django", "python", "dashboard", "API"],
   "scripts": {
